force-app/main/default/objects/Billing_Contract_Line_Item__c/Billing_Contract_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Billing Contract Line Item</label>
    <nameField>
        <displayFormat>BL-{00000}</displayFormat>
        <label>Billing Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Contract Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>