force-app/main/default/objects/Billing_Contract_Line_Item__c/fields/Activation_Required__c.field-meta.xml
<CustomField>
    <fullName>Activation_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Determined by the related Payment Terms</inlineHelpText>
    <label>Activation Required</label>
    <type>Checkbox</type>
</CustomField>