force-app/main/default/objects/Billing_Contract_Line_Item__c/fields/Activity_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Activity_Line_Item__c</fullName>
    <label>Activity Line Item</label>
    <referenceTo>Activity_Line_Item__c</referenceTo>
    <relationshipLabel>Billing Contract Line Items</relationshipLabel>
    <relationshipName>Billing_Contract_Line_Items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>