force-app/main/default/objects/Billing_Contract_Line_Item__c/fields/Auto_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox if line item is automatically renewed</description>
    <inlineHelpText>Checkbox if line item is automatically renewed</inlineHelpText>
    <label>Auto-Renewal</label>
    <type>Checkbox</type>
</CustomField>