force-app/main/default/objects/Billing_Contract_Line_Item__c/fields/Billing_Contract__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contract__c</fullName>
    <description>Billing Contract line item detail for Billing Contract object</description>
    <label>Billing Contract</label>
    <referenceTo>Billing_Contract__c</referenceTo>
    <relationshipLabel>Billing Contract Line Items</relationshipLabel>
    <relationshipName>Billing_Contract_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>