force-app/main/default/objects/Billing_Contract_Line_Item__c/fields/Billing_Hold__c.field-meta.xml
<CustomField>
    <fullName>Billing_Hold__c</fullName>
    <description>NICC-046977 - Billing Hold Checkbox - from the Billing Contract Record</description>
    <formula>Billing_Contract__r.Billing_Hold__c</formula>
    <inlineHelpText>Billing Hold Checkbox - from the Billing Contract Record</inlineHelpText>
    <label>Billing Hold</label>
    <type>Checkbox</type>
</CustomField>