force-app/main/default/objects/Billing_Contract_Line_Item__c/fields/Billing_Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Notification_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Billing Notification Date</label>
    <type>Date</type>
</CustomField>