force-app/main/default/objects/Billing_Contract_Line_Item__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <description>NICC-046977 - Company - from the Billing Contract record</description>
    <formula>Billing_Contract__r.Company__r.Name</formula>
    <inlineHelpText>Company - from the Billing Contract record</inlineHelpText>
    <label>Company</label>
    <type>Text</type>
</CustomField>