force-app/main/default/objects/Billing_Contract_Line_Item__c/fields/Credit_Processed__c.field-meta.xml
<CustomField>
    <fullName>Credit_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Will be marked true if a credit has been processed for this line item</inlineHelpText>
    <label>Credit Processed</label>
    <type>Checkbox</type>
</CustomField>