force-app/main/default/objects/Billing_Contract_Line_Item__c/fields/Deployment_Instance__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Instance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deployment Instance</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Billing Contract Line Items</relationshipLabel>
    <relationshipName>Billing_Contract_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>