force-app/main/default/objects/Billing_Contract_Line_Item__c/fields/Dimension_2__c.field-meta.xml
<CustomField>
    <fullName>Dimension_2__c</fullName>
    <formula>Product__r.Dimension_2__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dimension 2</label>
    <type>Text</type>
</CustomField>