force-app/main/default/objects/Billing_Contract_Line_Item__c/fields/Dimension_3__c.field-meta.xml
<CustomField>
    <fullName>Dimension_3__c</fullName>
    <formula>Product__r.Dimension_3__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dimension 3</label>
    <type>Text</type>
</CustomField>