force-app/main/default/objects/Billing_Contract_Line_Item__c/fields/Exclude_Automated_Invoicing__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Automated_Invoicing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude Automated Invoicing</label>
    <type>Checkbox</type>
</CustomField>