force-app/main/default/objects/Billing_Contract_Line_Item__c/fields/FFA_Currency__c.field-meta.xml
<CustomField>
    <fullName>FFA_Currency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FFA Currency</label>
    <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
    <relationshipLabel>Billing Contract Line Items</relationshipLabel>
    <relationshipName>Billing_Contract_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>