force-app/main/default/objects/Billing_Contract_Line_Item__c/fields/Line_Item_Description__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Provide information on line items</inlineHelpText>
    <label>Line Item Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>