force-app/main/default/objects/Billing_Contract_Line_Item__c/fields/Opp_Line_Item_ID__c.field-meta.xml
<CustomField>
    <fullName>Opp_Line_Item_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Opp Line Item ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>