force-app/main/default/objects/Billing_Contract_Line_Item__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Billing Contract Line Items</relationshipLabel>
    <relationshipName>Billing_Contract_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>