force-app/main/default/objects/Billing_Contract_Line_Item__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <formula>if(ISBLANK(Sales_Invoice_Line_Item__c) = true,&apos;N/A&apos;, Sales_Invoice_Line_Item__r.c2g__Invoice__r.c2g__PaymentStatus__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Status</label>
    <type>Text</type>
</CustomField>