force-app/main/default/objects/Billing_Contract_Line_Item__c/fields/Payment_Term_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Term Line Item</label>
    <referenceTo>Payment_Term_Line_Item__c</referenceTo>
    <relationshipLabel>Billing Contract Line Items</relationshipLabel>
    <relationshipName>Billing_Contract_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>