force-app/main/default/objects/Billing_Contract_Line_Item__c/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Terms</label>
    <referenceTo>Payment_Terms__c</referenceTo>
    <relationshipLabel>Billing Contract Line Items</relationshipLabel>
    <relationshipName>Billing_Contract_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>