force-app/main/default/objects/Billing_Contract_Line_Item__c/fields/Pro_Rated__c.field-meta.xml
<CustomField>
    <fullName>Pro_Rated__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>True if this item has been pro-rated for the first year</inlineHelpText>
    <label>Pro Rated</label>
    <type>Checkbox</type>
</CustomField>