force-app/main/default/objects/Billing_Contract_Line_Item__c/fields/Product_Package_Item__c.field-meta.xml
<CustomField>
    <fullName>Product_Package_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Package Item</label>
    <referenceTo>PSA_Product_Package_Milestone__c</referenceTo>
    <relationshipLabel>Billing Contract Line Items</relationshipLabel>
    <relationshipName>Billing_Contract_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>