force-app/main/default/objects/Billing_Contract_Line_Item__c/fields/Ready_for_Annual_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Annual_Invoice__c</fullName>
    <formula>if((TEXT( Revenue_Category__c )=&apos;Subscription&apos; || TEXT( Revenue_Category__c )=&apos;Hosting and Support&apos; || TEXT( Revenue_Category__c )=&apos;Support&apos;)&amp;&amp; Ready_to_Invoice__c = true, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ready for Annual Invoice</label>
    <type>Checkbox</type>
</CustomField>