force-app/main/default/objects/Billing_Contract_Line_Item__c/fields/Ready_to_Credit__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_Credit__c</fullName>
    <formula>Ready_to_Invoice__c = true
&amp;&amp;
Type__c = &apos;Credit&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ready to Credit</label>
    <type>Checkbox</type>
</CustomField>