force-app/main/default/objects/Billing_Contract_Line_Item__c/fields/Ready_to_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Will be set to true / false by a workflow rule based on today&apos;s date</inlineHelpText>
    <label>Ready to Invoice</label>
    <type>Checkbox</type>
</CustomField>