force-app/main/default/objects/Billing_Contract_Line_Item__c/fields/Renewal_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Quantity__c</fullName>
    <description>NICC-035500 - Changed Decimal Places</description>
    <inlineHelpText>The quantity that will be used when this contract is renewed...could be affected by user reductions from the Deployment Instance</inlineHelpText>
    <label>Renewal Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>