force-app/main/default/objects/Billing_Contract_Line_Item__c/fields/Revenue_Category__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Category__c</fullName>
    <label>Revenue Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hosting and Support</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Subscription</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>