force-app/main/default/objects/Billing_Contract_Line_Item__c/fields/Sales_Invoice_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Sales_Invoice_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Invoice Line Item</label>
    <referenceTo>c2g__codaInvoiceLineItem__c</referenceTo>
    <relationshipLabel>Billing Contract Line Items</relationshipLabel>
    <relationshipName>Billing_Contract_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>