force-app/main/default/objects/Billing_Contract_Line_Item__c/fields/Split_Order__c.field-meta.xml
<CustomField>
    <fullName>Split_Order__c</fullName>
    <inlineHelpText>Defines the order in which Billing Line Items are split up, this is useful when calculating the invoice date on multiple billing lines after activation.</inlineHelpText>
    <label>Split Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>