force-app/main/default/objects/Billing_Contract_Line_Item__c/fields/Total_Amount_USD__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_USD__c</fullName>
    <inlineHelpText>Total amount of the billing line stored in USD - converted via trigger based on the invoice date</inlineHelpText>
    <label>Total Amount (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>