force-app/main/default/objects/Billing_Contract_Line_Item__c/fields/Unit_Price_Abs__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price_Abs__c</fullName>
    <formula>ABS( Unit_Price__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Absolute value of the unit price</inlineHelpText>
    <label>Unit Price (Abs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>