force-app/main/default/objects/Billing_Contract_Line_Item__c/validationRules/Billing_Contract_LI_InvoicedandCancelled.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Contract_LI_InvoicedandCancelled</fullName>
    <active>false</active>
    <description>A record cannot be both invoiced and cancelled.</description>
    <errorConditionFormula>AND(Invoiced__c,Cancelled__c)=True</errorConditionFormula>
    <errorMessage>A billing line cannot be both invoiced and cancelled.</errorMessage>
</ValidationRule>