force-app/main/default/objects/Billing_Contract_Line_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Billing_Contract__c</columns>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Billing_Notification_Date__c</columns>
    <columns>Total_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>