force-app/main/default/objects/Billing_Contract_Line_Item__c/listViews/All_Pending_BC_s_Current_Month1.listView-meta.xml
<ListView>
    <fullName>All_Pending_BC_s_Current_Month1</fullName>
    <booleanFilter>1 AND 2 AND 3 and 4 and 5</booleanFilter>
    <columns>NAME</columns>
    <columns>Billing_Contract__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Line_Item_Description__c</columns>
    <columns>SKU__c</columns>
    <columns>Product__c</columns>
    <columns>Quantity__c</columns>
    <columns>Unit_Price__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Invoiced__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Invoice_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>THIS_MONTH</value>
    </filters>
    <filters>
        <field>Ready_to_Invoice__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Invoice</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>notEqual</operation>
        <value>Linda De Vree</value>
    </filters>
    <label>BCLs Ready to Invoice - Excl. Itesso BV</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>