force-app/main/default/objects/Billing_Contract_Line_Item__c/listViews/BC_Specific.listView-meta.xml
<ListView>
    <fullName>BC_Specific</fullName>
    <columns>Billing_Contract__c</columns>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Billing_Notification_Date__c</columns>
    <columns>Total_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Billing_Contract__c</field>
        <operation>contains</operation>
        <value>3110707</value>
    </filters>
    <label>BC Specific</label>
</ListView>